<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="UnusedResources">BTC Map</string>
    <string name="app_name_beta" tools:ignore="UnusedResources">BTC Map Beta</string>
    <string name="add_location">Add location</string>
    <string name="icon">Icon</string>
    <string name="qr_code">QR code</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="search_hint">Places, events, communities</string>
    <string name="settings">Settings</string>
    <string name="pay">Pay</string>
    <string name="you_dont_have_a_compatible_wallet">You don\'t have a compatible wallet</string>
    <string name="start_over">Start over</string>
    <string name="discard_invoice_confirmation">Start over? If you have already paid this invoice, you will be charged again.</string>
    <string name="not_verified">Not verified</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_report">Report</string>
    <string name="directions">Directions</string>
    <string name="share">Share</string>
    <string name="companion_warning">You\'ll need a companion app (%1$s) in order to make a payment. This app doesn\'t require you to fill any personal data, to the best of our knowledge. Please let us know if it\'s not the case and we\'ll remove this place.</string>
    <string name="comments_d">Comments (%1$d)</string>
    <string name="add_element_comment_disclosure_1">All comments are anonymous but we collect a small fee in sats as a spam protection measure</string>
    <string name="comment">Comment</string>
    <string name="comment_placeholder">Say something about this place…</string>
    <string name="btn_continue">Continue</string>
    <string name="add_comment">Add comment</string>
    <string name="error">Error</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="failed_to_load_tap_to_retry">%1$s\n\n%2$s</string>
    <string name="close">Close</string>
    <string name="navigate_up">Navigate up</string>
    <string name="comments">Comments</string>
    <string name="no_comments_yet">No comments yet</string>
    <string name="add">Add</string>
    <string name="boost">Boost</string>
    <string name="boost_merchant">Boost Merchant</string>
    <string name="boost_description">Make this merchant stand out in Bitcoin orange on the map, shine in the search results, and be discovered in the exclusive boosted locations section!\n\nThe fee is used to support the BTC Map open source project and continue its development.</string>
    <string name="boost_duration">Boost Duration</string>
    <string name="months_1">1 Month</string>
    <string name="months_3">3 Months</string>
    <string name="months_12">12 Months</string>
    <string name="duration_with_price" translatable="false">%1$s - %2$s</string>
    <string name="loading_quote">Loading quote…</string>
    <string name="current_fee">Current fee:</string>
    <string name="loading">loading</string>
    <string name="d_sat">%1$s sat</string>
    <string name="map_style">Map style</string>
    <string name="customize_colors">Customize colors</string>
    <string name="customize_colors_secondary">Marker, badge and button colors</string>
    <string name="style_auto">Auto (system)</string>
    <string name="style_liberty">OpenFreeMap Liberty</string>
    <string name="style_positron">OpenFreeMap Positron</string>
    <string name="style_bright">OpenFreeMap Bright</string>
    <string name="style_dark">OpenFreeMap Dark</string>
    <string name="style_dark_matter">OpenFreeMap Dark Matter</string>
    <string name="marker_background_color">Marker background</string>
    <string name="marker_icon_color">Marker icon</string>
    <string name="badge_background">Badge background</string>
    <string name="badge_text">Badge text</string>
    <string name="boosted_marker_background">Boosted marker background</string>
    <string name="boosted_marker_icon">Boosted marker icon</string>
    <string name="btc_map_boost_payment_request">BTC Map Boost Payment Request</string>
    <string name="your_boost_is_active">Your boost is active</string>
    <string name="boosted">Boosted</string>
    <string name="boosted_merchants">Boosted merchants</string>
    <string name="boosted_until_s">Boosted until %1$s</string>
    <string name="your_comment_has_been_posted">Your comment has been posted</string>
    <string name="comment_cannot_be_empty">Comment cannot be empty</string>
    <string name="btc_map_comment_payment_request">BTC Map Comment Payment Request</string>
    <string name="update_available">Update available</string>
    <string name="update_available_description">If you installed this app from a store, you can ignore this and let your store manage updates. If you installed via a direct APK, press the \"Get APK\" button to update.\n\nCurrent version: %1$s\nLatest version: %2$s</string>
    <string name="update_available_description_beta">A new beta build is available. Thank you for participating in BTC Map beta testing. Please contact us if you notice a bug or have any feature suggestions.\n\nCurrent version code: %1$d\nLatest version code: %2$d</string>
    <string name="get_apk">Get APK</string>
    <string name="ignore">Ignore</string>
    <string name="view_on_btcmap">View on btcmap.org</string>
    <string name="view_on_osm">View on openstreetmap.org</string>
    <string name="edit_on_osm">Edit on openstreetmap.org</string>
    <string name="s_km">%1$s km</string>
    <string name="s_m">%1$s m</string>
    <string name="button_background">Button background</string>
    <string name="button_icon">Button icon</string>
    <string name="button_border">Button border</string>
    <string name="color_hex" translatable="false">#%1$s</string>
    <string name="reset">Reset</string>
    <string name="color_picker_red">Red</string>
    <string name="color_picker_green">Green</string>
    <string name="color_picker_blue">Blue</string>
    <string name="color_picker_alpha">Alpha</string>
    <string name="area_icon">Area icon</string>
    <string name="read_more">Read more</string>
    <string name="collapse">Collapse</string>
    <string name="events">Events</string>
    <string name="event_date_time_range">%1$s, %2$s - %3$s</string>
    <string name="issues_d">Issues (%1$d)</string>
    <string name="issues_d_of_d">Issues (%1$d of %2$d)</string>
    <string name="issue_outdated">Outdated, needs verification</string>
    <string name="issue_outdated_soon">Will be outdated soon</string>
    <string name="issue_missing_icon">Missing icon</string>
    <string name="issue_invalid_tag_value">Invalid value for %1$s</string>
    <string name="issue_misspelled_tag_name">Misspelled tag name: %1$s</string>
    <string name="issue_unknown">Unknown issue</string>
    <string name="how_to_help">How to help?</string>
    <string name="opening_hours_closed">Closed</string>
    <string name="opening_hours_open_24_7">Open 24/7</string>
    <string name="save">Save</string>
    <string name="watch">Watch</string>
    <string name="unwatch">Unwatch</string>
    <string name="account">BTC Map Account</string>
    <string name="not_logged_in">Account</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="create_account">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="new_account">New account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="name_placeholder">Satoshi Cafe</string>
    <string name="password">Password</string>
    <string name="password_min_length" tools:ignore="PluralsCandidate">At least %1$d characters</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_do_not_match">Passwords don\'t match</string>
    <string name="field_required">Required</string>
    <string name="password_mask" translatable="false">••••••••</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="profile">Profile</string>
    <string name="change_username">Change username</string>
    <string name="new_username">New username</string>
    <string name="username_changed">Username updated</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="password_changed">Password updated</string>
    <string name="saved_places">Saved places</string>
    <string name="no_saved_places">No saved places</string>
    <string name="saved_areas">Saved areas</string>
    <string name="no_saved_areas">No saved areas</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="log_in_with_existing_account">Log in with existing account</string>
    <string name="create_account_subtitle">Create a new BTC Map account</string>
    <string name="sign_in_subtitle">Use your existing username and password</string>
    <string name="failed_to_create_new_account">Failed to create new account</string>
    <string name="failed_to_sign_in">Failed to sign in</string>
    <string name="account_created_sign_in_failed">Your account was created, but sign-in failed. Please sign in.</string>
    <string name="click_to_see_your_profile">Click to see your profile</string>
    <string name="delete">Delete</string>
    <string name="uploaded_images">Uploaded images</string>
    <string name="uploaded_images_empty">You haven\'t uploaded any images yet.</string>
    <string name="uploaded_images_failed">Couldn\'t delete the image.</string>
    <string name="uploaded_images_place">Place #%1$d</string>
    <string name="my_events">My events</string>
    <string name="my_events_empty">You haven\'t submitted any events yet.</string>
    <string name="my_events_failed">Couldn\'t load your events</string>
    <string name="add_location_drag_to_adjust">Drag the map to set the exact location</string>
    <string name="category">Category</string>
    <string name="category_placeholder">cafe</string>
    <string name="address">Address or directions</string>
    <string name="address_placeholder">1 HODL Lane, Block 21</string>
    <string name="website_optional">Website (optional)</string>
    <string name="website_placeholder">example.com</string>
    <string name="description_optional">Extra notes (optional)</string>
    <string name="description_placeholder">Accepts Lightning payments via Blink wallet, ATM in the back room</string>
    <string name="submit_place">Submit place</string>
    <string name="verify_or_report_description">Let editors know the current state of this place. Your report will be reviewed by the BTC Map community.</string>
    <string name="report_type_verified">Verified — still accepts Bitcoin</string>
    <string name="report_type_verified_description">You confirmed this place exists and currently accepts Bitcoin payments.</string>
    <string name="report_type_refused_sats">Refused Bitcoin payment</string>
    <string name="report_type_refused_sats_description">An attempt to pay with Bitcoin on-site was refused by the merchant.</string>
    <string name="report_type_out_of_business">Out of business</string>
    <string name="report_type_out_of_business_description">The place has permanently closed or is no longer operating.</string>
    <string name="report_comment_optional">Additional notes (optional)</string>
    <string name="report_comment_placeholder">Anything that helps reviewers understand the situation…</string>
    <string name="btn_submit">Submit</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
</resources>